--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+*,
+html,
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .title {
   font-family: sans-serif;
   text-align: center;
@@ -21,4 +31,51 @@
   border-radius: 50%;
   border: none;
   font-size: 8px;
+}
+
+button {
+  padding: 5px 10px;
+  border: 1px solid white;
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+  font-size: 14px;
+
+  font-weight: bold;
+}
+button:hover {
+  cursor: pointer;
+  background-color: black;
+  opacity: 0.5;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 5px;
+  gap: 15px;
+}
+.actions p {
+  color: white;
+}
+
+@media (max-width: 568px) {
+  .actions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+main {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  padding: 20px;
+  background-color: black;
+}
+
+#parent {
+  border: 0.5px solid white;
 }
